--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "docker": "docker build -t rafaelbrayner/reactjs_nginx:1.0.0 .",
+    "docker": "docker pull rafaelbrayner/reactjs_nginx:1.0.0",
     "react-docker": "docker run -d -p 3000:80 rafaelbrayner/reactjs_nginx:1.0.0"
   },
   "eslintConfig": {
